adding route of rest wrt stateId, lgaId and kitchenId
